add back maxPermSize but only add it as a jvm arg if java version < 1.8